2016-09-13  Deniz Yuret  <dyuret@ku.edu.tr>

	* TODO8:
	# charlm
	## experiment with other forms of lstm, profile speed
	## support cat and sub with KnetArray.
	# document KnetArray.
	# clean up old tags and register Knet
	# write examples/README
	# try to measure back functions one by one as well for gpu profiling.
	# make BLK,THR dependent on the input size? may improve final sum which is only 10x100 in this example.
	## extend benchmark tests to cover all combinations of 10,100,1000 dimensions.
	# finish cudnn, curand etc. if possible eliminate dependence on them.
	# mnist2d: sparse arrays
	# cpu convolution
	# implement axpy! for KnetArray if it is worth it to get faster updates.
	# check multi-gpu support on KnetArrays: can we copy, free, etc with a non-active device?

	* Release:

	Eliminated old tags.  Just tag one 0.7 and one 0.8 version.

	For each tagged version:
	- minimize REQUIRE
	- test on v0.4 v0.5 v0.6
	- test on cpu vs gpu

	julia 0.4 knet 0.7 cpu: ok
	julia 0.4 knet 0.7 gpu: fail: mnist4d,copyseq
	julia 0.4 knet 0.8 cpu: ok
	julia 0.4 knet 0.8 gpu: ok
	julia 0.4 autograd cpu: ok
	julia 0.4 autograd gpu: ok
	julia 0.5 knet 0.7 cpu: error
	julia 0.5 knet 0.7 gpu: error
	julia 0.5 knet 0.8 cpu: ok
	julia 0.5 knet 0.8 gpu: ok
	julia 0.5 autograd cpu: ok
	julia 0.5 autograd gpu: ok
	julia 0.6 knet 0.7 cpu: error
	julia 0.6 knet 0.7 gpu: error
	julia 0.6 knet 0.8 cpu: ok
	julia 0.6 knet 0.8 gpu: ok
	julia 0.6 autograd cpu: error, wip compat0.6, 0-dim array problem
	julia 0.6 autograd gpu: error, wip compat0.6

	julia 0.6 knet 0.8 cpu:
	using Knet
	WARNING: log{T <: Number}(x::AbstractArray{T}) is deprecated, use log.(x) instead.
	WARNING: cos{T <: Number}(x::AbstractArray{T}) is deprecated, use cos.(x) instead.
	WARNING: abs2{T <: Number}(x::AbstractArray{T}) is deprecated, use abs2.(x) instead.
	Tests pass.

	julia 0.6 autograd master cpu:
	using AutoGrad: ok
	Pkg.test("AutoGrad")