@@ -1,0 +1,38 @@
+using Knet
+@show a = reshape(KnetArray([1.0:6.0...]), (2,3))
+@show a[2]
+@show a[2,3]
+@show (a[2]=7;a)
+@show (a[2,3]=8;a)
+@show a[:]
+@show (a[:]=9;a)
+@show (a[:]=[11.0:16.0...];a)
+@show (a[:]=[21:26...];a)
+@show (b=KnetArray(rand(6));a[:]=b;a)
+@show (b=KnetArray(rand(0:9,6));a[:]=b;a)
+@show a[2:4]
+@show (a.ptr, a[2:4].ptr)
+@show (a[2:4]=10;a)
+@show (a[1:2]=a[5:6];a)
+@show (a[1:2]=ones(2);a)
+@show (a[5:6]=2ones(Int,2);a)
+@show a[:,:]
+@show a[1,:]
+@show a[:,1:2]
+@show a[1,1:2]
+@show a[1:2,1:2]
+@show (a[:,:]=21;a)
+@show (a[1,:]=22;a)
+@show (a[:,1:2]=23;a)
+@show (a[1,1:2]=24;a)
+@show (a[1:2,1:2]=25;a)
+@show (a[:,:]=31ones(6);a)
+@show (a[1,:]=32ones(3);a)
+@show (a[:,1:2]=33ones(4);a)
+@show (a[1,1:2]=34ones(2);a)
+@show (a[1:2,1:2]=35ones(4);a)
+@show (a[:,:]=41ones(Int,6);a)
+@show (a[1,:]=42ones(Int,3);a)
+@show (a[:,1:2]=43ones(Int,4);a)
+@show (a[1,1:2]=44ones(Int,2);a)
+@show (a[1:2,1:2]=45ones(Int,4);a)
